# audiospectr

./: .gitignore  LICENSE  README.md  pyproject.toml  sample_project.json
app/: audio.py  cli.py  compositor.py  config.py  effects.py  encoder.py  presets.py
app/layers/: bars.py  base.py  circular.py  particles.py  pulse.py  text.py  timer.py  wavebars.py  waveform.py
examples/: album-single.json  lofi-ambient.json  podcast.json
presets/: bars-bass-wall.json  bars-cyberpunk-peaks.json  bars-ember-wide.json  bars-ice-peaks.json  bars-lofi-amber.json  bars-minimal-white.json  bars-neon-mirror.json  bars-noir-steel.json  bars-vaporwave-dream.json  circular-ice-ring.json  circular-solar-ring.json  circular-synthwave-orbit.json  circular-vaporwave-halo.json  cyberpunk.json  minimal.json  neon.json  particles-embers-rise.json  particles-radial-sparks.json  particles-sidewind-cyan.json  particles-updraft-stars.json  pulse-bass-ring.json  pulse-deep-blue.json  pulse-hot-pink.json  pulse-spoked-electric.json  synthwave.json  timer-minimal-line.json  timer-neon-bar.json  wavebars-lofi-warm.json  wavebars-seewav-classic.json  wavebars-seewav-green.json  waveform-cyan-fill.json  waveform-dark-ember.json  waveform-forest-line.json  waveform-magenta-glow.json  waveform-silk-line.json
tests/: test_audio.py  test_cli.py  test_compositor.py  test_config.py  test_effects.py  test_encoder.py
tests/layers/: test_bars.py  test_base.py  test_circular.py  test_particles.py  test_pulse.py  test_text.py  test_timer.py  test_wavebars.py  test_waveform.py
tools/: gen_bg_examples.py
